--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -19,6 +19,7 @@
         document.write(`Seu nome tem ${nome.length} Letras<br>`)
         document.write(`Seu nome Em maiusculas e ${nome.toUpperCase()}<br>`)
         document.write(`Seu nome em minusculo é ${nome.toLocaleLowerCase()}`)
+        nome.toUpperCase
     </script>
 </body>
 </html>
